feat(backend): roster: Format code